# MITK-Diffusion

./: .gitignore  LICENSE.txt  PythonRequirements.txt  README.md
Modules/DiffusionCmdApps/: CMakeLists.txt  files.cmake  mitkDiffusionCommandLineParser.cpp  mitkDiffusionCommandLineParser.h  mitkDiffusionDataIOHelper.cpp  mitkDiffusionDataIOHelper.h
Modules/DiffusionCmdApps/Connectomics/: CMakeLists.txt  NetworkCreation.cpp  NetworkStatistics.cpp
Modules/DiffusionCmdApps/FiberProcessing/: CMakeLists.txt  CalculateDistanceToSegmentation.cpp  DistanceToSegmentation.cpp  FiberClustering.cpp  FiberColoring.cpp  FiberDirectionExtraction.cpp  FiberExtraction.cpp  FiberExtractionRoi.cpp  FiberJoin.cpp  FiberModification.cpp  FiberProcessing.cpp  FitFibersToImage.cpp  PrintFiberStatistics.cpp  Sift2WeightCopy.cpp  TractDensity.cpp  TractDensityFilter.cpp  TractParcellation.cpp  TractometryComparison.cpp
Modules/DiffusionCmdApps/FiberQuantification/: CMakeLists.txt  DistanceToSegmentation.cpp  EstimateNumSamplesForTractometry.cpp  PrintFiberStatistics.cpp  TractDensity.cpp  TractParcellation.cpp  Tractometry.cpp  TractometryComparison.cpp
Modules/DiffusionCmdApps/Fiberfox/: CMakeLists.txt  Fiberfox.cpp  RandomFiberPhantom.cpp
Modules/DiffusionCmdApps/IVIM/: CMakeLists.txt  DiffusionIvimFit.cpp  DiffusionKurtosisFit.cpp
Modules/DiffusionCmdApps/ImageQuantification/: CMakeLists.txt  DiffusionIndices.cpp  MultishellMethods.cpp  QballReconstruction.cpp  TensorReconstruction.cpp
Modules/DiffusionCmdApps/Misc/: CMakeLists.txt  CopyGeometry.cpp  DICOMLoader.cmake  DImp.cpp  DReg.cpp  DiffusionDICOMLoader.cpp  DmriDenoising.cpp  FiberScreenshot.cpp  FileFormatConverter.cpp  FlipPeaks.cpp  HeadMotionCorrection.cpp  ImageResampler.cpp  PeakExtraction.cpp  Registration.cpp  ResampleGradients.cpp  RoundBvalues.cpp  ShToOdfImage.cpp
Modules/DiffusionCmdApps/Python/: BrainExtraction.cpp
Modules/DiffusionCmdApps/Quantification/: CMakeLists.txt  DiffusionIndices.cpp  DiffusionIvimFit.cpp  DiffusionKurtosisFit.cpp  MultishellMethods.cpp  QballReconstruction.cpp  TensorReconstruction.cpp
Modules/DiffusionCmdApps/Tractography/: CMakeLists.txt  GlobalTractography.cpp  RfTraining.cpp  StreamlineTractography.cpp
Modules/DiffusionCmdApps/TractographyEvaluation/: AnchorConstrainedPlausibility.cpp  CMakeLists.txt  CalculateOverlap.cpp  CheckEpsAndOverlap.cpp  ExtractSimilarTracts.cpp  GetOverlappingTracts.cpp  MergeOverlappingTracts.cpp  PeaksAngularError.cpp  ReferenceSimilarity.cpp  TractDistance.cpp
Modules/DiffusionCore/: CMakeLists.txt  files.cmake  mitkDiffusionFunctionCollection.cpp  mitkDiffusionFunctionCollection.h  mitkDiffusionVersion.h.in
Modules/DiffusionCore/Algorithms/: itkAdcImageFilter.h  itkAdcImageFilter.txx  itkB0ImageExtractionImageFilter.h  itkB0ImageExtractionImageFilter.txx  itkB0ImageExtractionToSeparateImageFilter.h  itkB0ImageExtractionToSeparateImageFilter.txx  itkBrainMaskExtractionImageFilter.h  itkBrainMaskExtractionImageFilter.txx  itkCartesianToPolarVectorImageFilter.h  itkDiffusionOdfGeneralizedFaImageFilter.h  itkDiffusionOdfGeneralizedFaImageFilter.txx  itkDiffusionOdfPrepareVisualizationImageFilter.cpp  itkDiffusionOdfPrepareVisualizationImageFilter.h  itkDiffusionTensorPrincipalDirectionImageFilter.h  itkDiffusionTensorPrincipalDirectionImageFilter.txx  itkDistanceMapFilter.h  itkDistanceMapFilter.txx  itkDwiGradientLengthCorrectionFilter.cpp  itkDwiGradientLengthCorrectionFilter.h  itkDwiNormilzationFilter.h  itkDwiNormilzationFilter.txx  itkElectrostaticRepulsionDiffusionGradientReductionFilter.h  itkElectrostaticRepulsionDiffusionGradientReductionFilter.txx  itkExtractChannelFromRgbaImageFilter.cpp  itkExtractChannelFromRgbaImageFilter.h  itkExtractDwiChannelFilter.h  itkExtractDwiChannelFilter.txx  itkFlipPeaksFilter.cpp  itkFlipPeaksFilter.h  itkFourDToVectorImageFilter.cpp  itkFourDToVectorImageFilter.h  itkGaussianInterpolateImageFunction.h  itkGaussianInterpolateImageFunction.txx  itkMergeDiffusionImagesFilter.h  itkMergeDiffusionImagesFilter.txx  itkNonLocalMeansDenoisingFilter.h  itkNonLocalMeansDenoisingFilter.txx  itkOdfMaximaExtractionFilter.cpp  itkOdfMaximaExtractionFilter.h  itkOdfToRgbImageFilter.h  (+42 more)
Modules/DiffusionCore/DicomImport/: mitkDicomDiffusionImageHeaderReader.cpp  mitkDicomDiffusionImageHeaderReader.h  mitkDicomDiffusionImageReader.cpp  mitkDicomDiffusionImageReader.h  mitkDiffusionDICOMFileReader.cpp  mitkDiffusionDICOMFileReader.h  mitkDiffusionHeaderDICOMFileReader.cpp  mitkDiffusionHeaderDICOMFileReader.h  mitkDiffusionHeaderPhilipsDICOMFileReader.cpp  mitkDiffusionHeaderPhilipsDICOMFileReader.h  mitkDiffusionHeaderSiemensDICOMFileReader.cpp  mitkDiffusionHeaderSiemensDICOMFileReader.h  mitkDiffusionHeaderSiemensMosaicDICOMFileReader.h  mitkGEDicomDiffusionImageHeaderReader.cpp  mitkGEDicomDiffusionImageHeaderReader.h  mitkGroupDiffusionHeadersFilter.cpp  mitkGroupDiffusionHeadersFilter.h  mitkPhilipsDicomDiffusionImageHeaderReader.cpp  mitkPhilipsDicomDiffusionImageHeaderReader.h  (+4 more)
Modules/DiffusionImage/: CMakeLists.txt  files.cmake  mitkDiffusionImageHelperFunctions.cpp  mitkDiffusionImageHelperFunctions.h
Modules/DiffusionModelling/: CMakeLists.txt  files.cmake  mitkDiffusionFunctionCollection.h  mitkDiffusionModellingHelperFunctions.cpp  mitkDiffusionModellingHelperFunctions.h
Modules/DiffusionRegistration/: CMakeLists.txt  files.cmake  mitkDWIHeadMotionCorrectionFilter.h  mitkDiffusionImageCorrectionFilter.cpp  mitkDiffusionImageCorrectionFilter.h  mitkPyramidImageRegistrationMethod.cpp  mitkPyramidImageRegistrationMethod.h  mitkPyramidRegistrationMethodHelper.h  mitkRegistrationWrapper.h
Modules/FiberBundle/: CMakeLists.txt  files.cmake  mitkFiberBundle.cpp  mitkFiberBundle.h  mitkPeakImage.h  mitkPlanarFigureComposite.h
Modules/FiberDissection/: CMakeLists.txt  files.cmake  files.cmake.autosave
Modules/FiberProcessing/: CMakeLists.txt  files.cmake  itkFiberExtractionFilter.cpp  itkTractsToFiberEndingsImageFilter.cpp  itkTractsToRgbaImageFilter.cpp  itkTractsToVectorImageFilter.cpp
(+911 files in other folders)
